--- a/asstes/homepage/css/style.css
+++ b/asstes/homepage/css/style.css
@@ -519,7 +519,7 @@ header {
     color: #fff;
 }
 .our_work_section:nth-child(1) {
-    background-image:  url("https://dbvertex.com/mobile/assets/homepage/images/Group 1000005052.png");
+    background-image: ;
     color: #000;
     top: 0;
     z-index: 1;
@@ -531,7 +531,7 @@ header {
 }
 .our_work_section:nth-child(2) {
     box-shadow: inset 0 1px 80px rgba(0, 0, 0, 0.14);
-    background-image: url("https://dbvertex.com/mobile/assets/homepage/images/Group 1000005052.png");
+    background-image: ;
     color: #000;
     top: 100vh;
     z-index: 2;
@@ -539,7 +539,7 @@ header {
     width:inherit;
 }
 .backimage{
-    background-image: url("https://dbvertex.com/mobile/assets/homepage/images/Mask group.png");
+    background-image:;
     z-index: 3;
     background-repeat: no-repeat;
     width:inherit;
@@ -549,7 +549,7 @@ header {
 }
 .our_work_section:nth-child(3) {
     box-shadow: inset 0 1px 80px rgba(0, 0, 0, 0.14);
-    background-image: url("https://dbvertex.com/mobile/assets/homepage/images/Group 1000005052.png");
+    background-image:;
     color: #000;
     top: 200vh;
     z-index: 3;
@@ -562,7 +562,7 @@ header {
 .our_work_section:nth-child(4) {
     box-shadow: inset 0 1px 80px rgba(0, 0, 0, 0.14);
     background-color: #FF8592;
-    background-image:  url("https://dbvertex.com/mobile/assets/homepage/images/Group 1000005052.png");
+    background-image:  ;
     background-size: cover;
     color: #fff;
     top: 300vh;
